chore: Update homepage

--- a/package.json
+++ b/package.json
@@ -22,5 +22,5 @@
   "bugs": {
     "url": "https://github.com/MarinaFroes/FEND-project5-Restaurant-Review-App/issues"
   },
-  "homepage": "https://github.com/MarinaFroes/FEND-project5-Restaurant-Review-App#readme"
+  "homepage": "https://marinafroes.github.io/FEND-project5-Restaurant-Review-App/"
 }
