feat: Make images responsive

--- a/package.json
+++ b/package.json
@@ -2,11 +2,9 @@
   "name": "fend-restaurant-review",
   "version": "1.0.0",
   "description": "Udacity Front-End Nanodegree Project",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "python -m SimpleHTTPServer 8000",
-    "deploy": "gh-pages -d dist"
+    "start": "python -m SimpleHTTPServer 8000"
   },
   "repository": {
     "type": "git",
@@ -26,7 +24,5 @@
     "url": "https://github.com/MarinaFroes/FEND-project5-Restaurant-Review-App/issues"
   },
   "homepage": "https://marinafroes.github.io/FEND-project5-Restaurant-Review-App/",
-  "devDependencies": {
-    "gh-pages": "^2.0.1"
-  }
+  "devDependencies": {}
 }
